logto/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devver-logto
  labels:
    kasten-backup-prod-ns: "true"
