logto/deployment-logto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto
  namespace: devver-logto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logto
  template:
    metadata:
      labels:
        app: logto
    spec:
      containers:
        - name: logto
          image: svhd/logto:latest  
          command: ["sh", "-c"]
          args:
            - |
              export DB_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@logto-postgres-svc:5432/logto"
              npm run cli db seed -- --swe
              npm run cli db alteration deploy latest
              npm start
          ports:
            - containerPort: 3001
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
