logto/svc-logto.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto-svc
  namespace: devver-logto
spec:
  type: ClusterIP
  selector:
    app: logto
  ports:
    - name: core
      port: 3001
      targetPort: 3001
    - name: admin
      port: 3002
      targetPort: 3002
