logto/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto-postgres-svc
  namespace: devver-logto
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: logto-postgres
