logto/ingress-logto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logto-ingress
  namespace: devver-logto
  annotations:
    external-dns.alpha.kubernetes.io/target: reverse-proxy.vrhometech.fr
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
  - host: logto.devver.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logto-svc
            port:
              number: 3001
  tls:
  - hosts:
      - logto.devver.app
    secretName: logto-tls
